Last commit before activation_ind removal

--- a/notebooks/01_ingest_raw_to_bronze.ipynb
+++ b/notebooks/01_ingest_raw_to_bronze.ipynb
@@ -56,29 +56,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "29ed1b80-74b6-4c50-9693-18691b9d019e",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "SELECT current_database();\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "0493fb1f-3518-4819-b2a8-f7e843240aee",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -112,27 +89,6 @@
    "source": [
     "%sql\n",
     "DESCRIBE DETAIL mini_proj_logs.etl_log;\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "6233433e-8f73-4a8b-9bfa-31aaba3a3446",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "spark.table(\"mini_proj_logs.etl_log\").show()\n"
    ]
   },
   {
@@ -195,14 +151,15 @@
     "from pyspark.sql.types import *\n",
     "\n",
     "patient_schema = StructType([\n",
-    "    StructField(\"patient_id\", StringType(), False),   \n",
+    "    StructField(\"patient_id\", StringType(), False),\n",
     "    StructField(\"name\", StringType(), True),\n",
     "    StructField(\"age\", IntegerType(), True),\n",
     "    StructField(\"address\", StringType(), True),\n",
     "    StructField(\"phone_number\", StringType(), True),\n",
     "    StructField(\"bill_amount\", DoubleType(), True),\n",
     "    StructField(\"insurance_provider\", StringType(), True),\n",
-    "    StructField(\"policy_id\", StringType(), False)\n",
+    "    StructField(\"policy_id\", StringType(), False),\n",
+    "    StructField(\"Act_Ind\", StringType(), False)\n",
     "])\n"
    ]
   },
@@ -229,6 +186,7 @@
     "    input_file_name,\n",
     "    monotonically_increasing_id\n",
     ")\n",
+    "from pyspark.sql.functions import col, trim, regexp_replace, when\n",
     "from datetime import date\n",
     "\n",
     "batch_id = date.today().strftime(\"%Y-%m-%d\")\n",
@@ -297,6 +255,27 @@
    "source": [
     "print(\"Patient_RAW Schema:\")\n",
     "df_patient_raw.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fb7d557b-4175-4d5c-a22b-c1ffff9c529f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_patient_raw.select(\"age\").distinct().show(20, truncate=False)\n"
    ]
   },
   {
@@ -474,8 +453,9 @@
     "    insurance_schema = StructType([\n",
     "    StructField(\"policy_id\", StringType(), True),\n",
     "    StructField(\"insurance_provider\", StringType(), True),\n",
-    "    StructField(\"amount_covered\", LongType(), True),   \n",
-    "    StructField(\"claim_status\", StringType(), True)\n",
+    "    StructField(\"amount_covered\", DoubleType(), True),   \n",
+    "    StructField(\"claim_status\", StringType(), True),\n",
+    "    StructField(\"Act_Ind\", StringType(), False)\n",
     "    ])\n",
     "    df_insurance_raw = (\n",
     "    spark.read\n",
@@ -1001,6 +981,98 @@
     "\n",
     "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"mini_proj_logs.etl_log_accessible\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "388ff364-5927-46e9-b934-a8e25e24a589",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "use catalog hive_metastore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d05b64a6-3412-4291-96a1-8a70788979fd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "create database if not exists mini_proj_bronze;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0caf5334-7975-4e5b-8198-7a19e075bcef",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "df=spark.table(\"patient_bronze\")\n",
+    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"mini_proj_bronze.patient_bronze\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d31e5357-5809-4fee-8e28-688a04ed7704",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "df=spark.table(\"insurance_bronze\")\n",
+    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"mini_proj_bronze.insurance_bronze\")"
+   ]
   }
  ],
  "metadata": {
@@ -1015,7 +1087,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4815705922844279,
+     "commandId": 4964639187635870,
      "dataframes": [
       "_sqldf"
      ]
