--- a/notebooks/02_clean_transform_silver.ipynb
+++ b/notebooks/02_clean_transform_silver.ipynb
@@ -34,27 +34,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ff9cfb85-8f2a-4217-8e8b-fc865578d695",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# dbutils.fs.rm(\"s3a://mini-project-sathwik/logs/etl_log\", True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "d6a85d62-69c7-4f83-8373-271cd1c999f1",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -180,9 +159,9 @@
     "    .withColumn(\"bill_amount\", col(\"bill_amount\").cast(\"double\"))\n",
     "    .withColumn(\"insurance_provider\", trim(col(\"insurance_provider\")))\n",
     "    .withColumn(\"policy_id\", trim(col(\"policy_id\")))\n",
+    "    .withColumn(\"Act_Ind\", upper(col(\"Act_Ind\")))\n",
     "    # Business key (MD5)\n",
     "    .withColumn(\"primary_key\", md5(concat_ws(\"|\", col(\"patient_id\"), col(\"name\"))))\n",
-    "\n",
     "    # Checksum of all changeable attributes\n",
     "    .withColumn(\n",
     "        \"checksum_txt\",\n",
@@ -393,6 +372,7 @@
     "            col(\"amount_covered\"),\n",
     "            col(\"claim_status\")\n",
     "        )))\n",
+    "        .withColumn(\"Act_Ind\", upper(col(\"Act_Ind\")))\n",
     "        .withColumn(\"primary_key\", md5(col(\"policy_id\")))\n",
     "        .withColumn(\"create_timestamp\", current_timestamp())\n",
     "        .withColumn(\"update_timestamp\",lit(\"9999-12-31 23:59:59\").cast(\"timestamp\"))\n",
@@ -610,29 +590,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "31e8d424-cf97-40c7-b60c-35a7aab8e189",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# %sql\n",
-    "# DROP TABLE IF EXISTS patient_dim;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "e8180ccd-63fa-428b-8bed-8d10ebd06531",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -661,29 +618,6 @@
     "USING DELTA\n",
     "LOCATION 's3a://mini-project-sathwik/gold/patient_dim'\n",
     ";\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "f3e92ced-9a96-4d18-98cc-a7c3d68bbf7c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# %sql\n",
-    "# DROP TABLE IF EXISTS insurance_dim;"
    ]
   },
   {
@@ -901,7 +835,7 @@
     "    SELECT *,\n",
     "           ROW_NUMBER() OVER (\n",
     "               PARTITION BY patient_id\n",
-    "               ORDER BY row_sequence DESC\n",
+    "               ORDER BY Act_Ind desc,row_sequence DESC\n",
     "           ) AS rn\n",
     "    FROM mini_proj_logs.patient_silver_addTranscationindicator\n",
     ") t\n",
@@ -925,7 +859,7 @@
      "showTitle": false,
      "tableResultSettingsMap": {
       "0": {
-       "dataGridStateBlob": null,
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1766507844314}",
        "filterBlob": "{\"version\":1,\"filterGroups\":[],\"syncTimestamp\":1765954902916}",
        "queryPlanFiltersBlob": "[]",
        "tableResultIndex": 0
@@ -1246,6 +1180,47 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "c08aa0e6-e82d-4242-a43b-da9c8aa0011b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "MERGE INTO hive_metastore.default.patient_final_silver tgt\n",
+    "USING (\n",
+    "    SELECT d.patient_id\n",
+    "    FROM hive_metastore.default.patient_prefinal_silver d\n",
+    "    WHERE d.Act_Ind = 'D'\n",
+    "      AND NOT EXISTS (\n",
+    "          SELECT 1\n",
+    "          FROM hive_metastore.default.patient_prefinal_silver x\n",
+    "          WHERE x.patient_id = d.patient_id\n",
+    "            AND x.Act_Ind IN ('I','U')\n",
+    "      )\n",
+    ") src\n",
+    "ON tgt.patient_id = src.patient_id\n",
+    "AND tgt.end_date = '9999-12-31'\n",
+    "\n",
+    "WHEN MATCHED THEN\n",
+    "  UPDATE SET\n",
+    "    tgt.end_date = current_date(),\n",
+    "    tgt.update_timestamp = current_timestamp();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "f8fba12c-d231-47e4-91b9-5cd3afc29f9a",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -1368,6 +1343,29 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "78e798c4-22af-4afe-82b0-1902b6ee9cdb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "show tables;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "3d84b318-fcfa-4c5e-be62-5db5fe1e9caa",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -1377,7 +1375,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "DROP TABLE IF EXISTS insurance_prefinal_silver; CREATE TABLE IF NOT EXISTS insurance_prefinal_silver\n",
+    "CREATE TABLE IF NOT EXISTS insurance_prefinal_silver\n",
     "USING DELTA\n",
     "LOCATION 's3a://mini-project-sathwik/silver/insurance_prefinal_silver'\n",
     "AS\n",
@@ -1386,7 +1384,7 @@
     "    SELECT *,\n",
     "           ROW_NUMBER() OVER (\n",
     "               PARTITION BY policy_id\n",
-    "               ORDER BY row_sequence DESC\n",
+    "               ORDER BY Act_Ind desc,row_sequence DESC\n",
     "           ) AS rn\n",
     "    FROM mini_proj_logs.insurance_silver_addTranscationindicator\n",
     ") t\n",
@@ -1643,6 +1641,47 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "8267a8b5-aec5-4528-8779-e04979b79871",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "MERGE INTO hive_metastore.default.insurance_final_silver tgt\n",
+    "USING (\n",
+    "    SELECT d.policy_id\n",
+    "    FROM hive_metastore.default.insurance_prefinal_silver d\n",
+    "    WHERE d.Act_Ind = 'D'\n",
+    "      AND NOT EXISTS (\n",
+    "          SELECT 1\n",
+    "          FROM hive_metastore.default.insurance_prefinal_silver x\n",
+    "          WHERE x.policy_id = d.policy_id\n",
+    "            AND x.Act_Ind IN ('I','U')\n",
+    "      )\n",
+    ") src\n",
+    "ON tgt.policy_id = src.policy_id\n",
+    "AND tgt.end_date = '9999-12-31'\n",
+    "\n",
+    "WHEN MATCHED THEN\n",
+    "  UPDATE SET\n",
+    "    tgt.end_date = current_date(),\n",
+    "    tgt.update_timestamp = current_timestamp();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "ef4eb284-6f0f-4446-82af-035cdc99d249",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -1734,7 +1773,14 @@
      "inputWidgets": {},
      "nuid": "31040336-5f3a-40ee-8f3d-e71427b16a92",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": null,
+       "filterBlob": "{\"version\":1,\"filterGroups\":[],\"syncTimestamp\":1766552801543}",
+       "queryPlanFiltersBlob": "[]",
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
