--- a/notebooks/03_scd2_merge_gold.ipynb
+++ b/notebooks/03_scd2_merge_gold.ipynb
@@ -288,7 +288,7 @@
      "tableResultSettingsMap": {
       "0": {
        "dataGridStateBlob": null,
-       "filterBlob": "{\"version\":1,\"filterGroups\":[{\"enabled\":true,\"filterGroupId\":\"fg_1c1c6b4d\",\"op\":\"OR\",\"filters\":[{\"filterId\":\"f_96f48b5e\",\"enabled\":true,\"columnId\":\"activation_ind\",\"dataType\":\"string\",\"filterType\":\"oneof\"}],\"local\":false,\"updatedAt\":1766126378645}],\"syncTimestamp\":1766126378646}",
+       "filterBlob": "{\"version\":1,\"filterGroups\":[],\"syncTimestamp\":1766382025348}",
        "queryPlanFiltersBlob": "[]",
        "tableResultIndex": 0
       }
