--- a/notebooks/04_validation_queries.ipynb
+++ b/notebooks/04_validation_queries.ipynb
@@ -342,7 +342,7 @@
    },
    "outputs": [],
    "source": [
-    "create database if not exists mini_proj_bronze;"
+    "-- create database if not exists mini_proj_bronze;"
    ]
   },
   {
@@ -363,9 +363,9 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "df=spark.table(\"patient_bronze\")\n",
-    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"mini_proj_bronze.patient_bronze\")"
+    "-- %python\n",
+    "-- df=spark.table(\"patient_bronze\")\n",
+    "-- df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"mini_proj_bronze.patient_bronze\")"
    ]
   },
   {
@@ -386,9 +386,9 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "df=spark.table(\"insurance_bronze\")\n",
-    "df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"mini_proj_bronze.insurance_bronze\")"
+    "-- %python\n",
+    "-- df=spark.table(\"insurance_bronze\")\n",
+    "-- df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"mini_proj_bronze.insurance_bronze\")"
    ]
   }
  ],
