--- a/notebooks/Bronze Layer.ipynb
+++ b/notebooks/Bronze Layer.ipynb
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "%run ./05_Logging_Utility\n"
+    "%run ./Logging_File\n"
    ]
   },
   {
@@ -109,22 +109,12 @@
    },
    "outputs": [],
    "source": [
-    "# Databricks Notebook\n",
-    "# ---------------------------------------------------------\n",
-    "# Notebook 01: Ingest Raw Source Files into Bronze Layer\n",
-    "# ---------------------------------------------------------\n",
     "\n",
     "from pyspark.sql.functions import current_timestamp, input_file_name\n",
     "from pyspark.sql.types import *\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
     "spark = SparkSession.builder.getOrCreate()\n",
-    "\n",
-    "# -----------------------------\n",
-    "# 1. File Paths\n",
-    "# -----------------------------\n",
-    "patient_src_path = \"s3a://mini-project-sathwik/raw/patient/Patient_Source.csv\"\n",
-    "insurance_src_path = \"s3a://mini-project-sathwik/raw/insurance/Insurance_Source.csv\"\n",
     "\n",
     "bronze_patient_path = \"s3a://mini-project-sathwik/bronze/patient_bronze\"\n",
     "bronze_insurance_path = \"s3a://mini-project-sathwik/bronze/insurance_bronze\"\n"
@@ -153,7 +143,7 @@
     "patient_schema = StructType([\n",
     "    StructField(\"patient_id\", StringType(), False),\n",
     "    StructField(\"name\", StringType(), True),\n",
-    "    StructField(\"age\", IntegerType(), True),\n",
+    "    StructField(\"age\", StringType(), True),\n",
     "    StructField(\"address\", StringType(), True),\n",
     "    StructField(\"phone_number\", StringType(), True),\n",
     "    StructField(\"bill_amount\", DoubleType(), True),\n",
@@ -186,32 +176,43 @@
     "    input_file_name,\n",
     "    monotonically_increasing_id\n",
     ")\n",
-    "from pyspark.sql.functions import col, trim, regexp_replace, when\n",
     "from datetime import date\n",
     "\n",
     "batch_id = date.today().strftime(\"%Y-%m-%d\")\n",
     "\n",
-    "\n",
     "pipeline_name = \"Patient Bronze Load\"\n",
     "layer = \"bronze\"\n",
     "\n",
-    "# S3 source path\n",
-    "patient_src_path = \"s3a://mini-project-sathwik/raw/patient/Patient_Source.csv\"\n",
-    "\n",
-    "# derive file name dynamically\n",
-    "file_name = patient_src_path.split(\"/\")[-1]\n",
+    "patient_src_path = \"s3a://mini-project-sathwik/raw/patient/\"\n",
     "\n",
     "try:\n",
+    "    # 1. Find latest file dynamically\n",
+    "    files = dbutils.fs.ls(patient_src_path)\n",
+    "    latest_file = sorted(\n",
+    "        files,\n",
+    "        key=lambda x: x.modificationTime,\n",
+    "        reverse=True\n",
+    "    )[0].path\n",
+    "\n",
+    "    file_name = latest_file.split(\"/\")[-1]\n",
+    "\n",
+    "    # 2. Read ONLY the latest file\n",
     "    df_patient_raw = (\n",
     "        spark.read\n",
     "        .schema(patient_schema)\n",
     "        .option(\"header\", True)\n",
-    "        .csv(patient_src_path)\n",
+    "        .csv(latest_file)\n",
     "        .withColumn(\"ingest_time\", current_timestamp())\n",
     "        .withColumn(\"source_file\", input_file_name())\n",
     "        .withColumn(\"row_sequence\", monotonically_increasing_id())\n",
     "    )\n",
+    "\n",
+    "    # 3. Safety check\n",
     "    row_count = df_patient_raw.count()\n",
+    "    if row_count == 0:\n",
+    "        raise Exception(\"Latest source file contains no records\")\n",
+    "\n",
+    "    # 4. Log success\n",
     "    log_etl(\n",
     "        pipeline_name=pipeline_name,\n",
     "        batch_id=batch_id,\n",
@@ -226,11 +227,11 @@
     "    log_etl(\n",
     "        pipeline_name=pipeline_name,\n",
     "        batch_id=batch_id,\n",
-    "        file_name=file_name,\n",
+    "        file_name=file_name if 'file_name' in locals() else \"UNKNOWN\",\n",
     "        layer=layer,\n",
     "        status=\"FAILED\",\n",
     "        row_count=0,\n",
-    "        message=f\"Error processing {file_name}: {str(e)}\"\n",
+    "        message=f\"Error processing patient file: {str(e)}\"\n",
     "    )\n",
     "    raise\n"
    ]
@@ -275,7 +276,7 @@
    },
    "outputs": [],
    "source": [
-    "df_patient_raw.select(\"age\").distinct().show(20, truncate=False)\n"
+    "df_patient_raw.select(\"age\").distinct().show(100, truncate=False)\n"
    ]
   },
   {
@@ -426,7 +427,7 @@
     "from datetime import date\n",
     "from pyspark.sql.types import (\n",
     "    StructType, StructField,\n",
-    "    StringType, LongType, TimestampType\n",
+    "    StringType, DoubleType\n",
     ")\n",
     "from pyspark.sql.functions import (\n",
     "    current_timestamp,\n",
@@ -434,39 +435,51 @@
     "    monotonically_increasing_id\n",
     ")\n",
     "\n",
-    "# =========================\n",
-    "# Batch & Pipeline Metadata\n",
-    "# =========================\n",
     "batch_id = date.today().strftime(\"%Y-%m-%d\")\n",
-    "\n",
     "\n",
     "pipeline_name = \"Insurance Bronze Load\"\n",
     "layer = \"bronze\"\n",
     "\n",
     "# S3 source path\n",
-    "insurance_src_path = \"s3a://mini-project-sathwik/raw/insurance/Insurance_Source.csv\"\n",
-    "\n",
-    "# derive file name dynamically (works for s3a, dbfs, local)\n",
-    "file_name = insurance_src_path.split(\"/\")[-1]\n",
+    "insurance_src_path = \"s3a://mini-project-sathwik/raw/insurance/\"\n",
     "\n",
     "try:\n",
+    "    # 1. Find latest file dynamically\n",
+    "    files = dbutils.fs.ls(insurance_src_path)\n",
+    "    latest_file = sorted(\n",
+    "        files,\n",
+    "        key=lambda x: x.modificationTime,\n",
+    "        reverse=True\n",
+    "    )[0].path\n",
+    "\n",
+    "    file_name = latest_file.split(\"/\")[-1]\n",
+    "\n",
+    "    # 2. Define schema\n",
     "    insurance_schema = StructType([\n",
-    "    StructField(\"policy_id\", StringType(), True),\n",
-    "    StructField(\"insurance_provider\", StringType(), True),\n",
-    "    StructField(\"amount_covered\", DoubleType(), True),   \n",
-    "    StructField(\"claim_status\", StringType(), True),\n",
-    "    StructField(\"Act_Ind\", StringType(), False)\n",
+    "        StructField(\"policy_id\", StringType(), True),\n",
+    "        StructField(\"insurance_provider\", StringType(), True),\n",
+    "        StructField(\"amount_covered\", DoubleType(), True),\n",
+    "        StructField(\"claim_status\", StringType(), True),\n",
+    "        StructField(\"Act_Ind\", StringType(), False)\n",
     "    ])\n",
+    "\n",
+    "    # 3. Read ONLY the latest file\n",
     "    df_insurance_raw = (\n",
-    "    spark.read\n",
-    "    .option(\"header\", True)\n",
-    "    .schema(insurance_schema)          \n",
-    "    .csv(insurance_src_path)\n",
-    "    .withColumn(\"ingest_time\", current_timestamp())\n",
-    "    .withColumn(\"source_file\", input_file_name())\n",
-    "    .withColumn(\"row_sequence\", monotonically_increasing_id())\n",
+    "        spark.read\n",
+    "        .option(\"header\", True)\n",
+    "        .schema(insurance_schema)\n",
+    "        .csv(latest_file)\n",
+    "        .withColumn(\"ingest_time\", current_timestamp())\n",
+    "        .withColumn(\"source_file\", input_file_name())\n",
+    "        .withColumn(\"row_sequence\", monotonically_increasing_id())\n",
     "    )\n",
+    "\n",
+    "    # 4. Safety check\n",
     "    row_count = df_insurance_raw.count()\n",
+    "    if row_count == 0:\n",
+    "        raise Exception(\"Latest insurance source file contains no records\")\n",
+    "\n",
+    "    # 5. Log success\n",
     "    log_etl(\n",
     "        pipeline_name=pipeline_name,\n",
     "        batch_id=batch_id,\n",
@@ -481,11 +494,11 @@
     "    log_etl(\n",
     "        pipeline_name=pipeline_name,\n",
     "        batch_id=batch_id,\n",
-    "        file_name=file_name,\n",
+    "        file_name=file_name if 'file_name' in locals() else \"UNKNOWN\",\n",
     "        layer=layer,\n",
     "        status=\"FAILED\",\n",
     "        row_count=0,\n",
-    "        message=f\"Error processing {file_name}: {str(e)}\"\n",
+    "        message=f\"Error processing insurance file: {str(e)}\"\n",
     "    )\n",
     "    raise\n"
    ]
@@ -1094,7 +1107,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "01_ingest_raw_to_bronze",
+   "notebookName": "Bronze Layer",
    "widgets": {}
   },
   "language_info": {
