--- a/notebooks/Gold_Tables.ipynb
+++ b/notebooks/Gold_Tables.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "%run ./05_Logging_Utility\n"
+    "%run ./Logging_File\n"
    ]
   },
   {
@@ -90,8 +90,6 @@
     "            start_date,\n",
     "            end_date,\n",
     "            CASE WHEN end_date = '9999-12-31' THEN 'Y' ELSE 'N' END AS is_current,\n",
-    "            activation_ind,\n",
-    "            ingest_time,\n",
     "            source_file,\n",
     "            create_timestamp,\n",
     "            update_timestamp,\n",
@@ -160,7 +158,14 @@
      "inputWidgets": {},
      "nuid": "03896465-ae40-44ae-850d-e85daed49505",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1769682299697}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
@@ -215,7 +220,7 @@
     "            start_date,\n",
     "            end_date,\n",
     "            CASE WHEN end_date = '9999-12-31' THEN 'Y' ELSE 'N' END AS is_current,\n",
-    "            activation_ind,\n",
+    "            -- activation_ind,\n",
     "\n",
     "            --Audit / Lineage\n",
     "            ingest_time,\n",
@@ -285,14 +290,7 @@
      "inputWidgets": {},
      "nuid": "c6f43585-4060-4631-84d3-e7bad5a570d1",
      "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": null,
-       "filterBlob": "{\"version\":1,\"filterGroups\":[],\"syncTimestamp\":1766382025348}",
-       "queryPlanFiltersBlob": "[]",
-       "tableResultIndex": 0
-      }
-     },
+     "tableResultSettingsMap": {},
      "title": ""
     }
    },
@@ -818,7 +816,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "03_scd2_merge_gold",
+   "notebookName": "Gold_Tables",
    "widgets": {}
   },
   "language_info": {
