--- a/notebooks/Logging_File.ipynb
+++ b/notebooks/Logging_File.ipynb
@@ -120,6 +120,29 @@
     "        )\n",
     "    \"\"\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3a8f7e2a-8f9b-4137-9675-9d4bffcea1e9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select * from mini_proj_logs.etl_log where status='FAILURE';"
+   ]
   }
  ],
  "metadata": {
@@ -134,14 +157,14 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4820206034056090,
+     "commandId": 6471702135224214,
      "dataframes": [
       "_sqldf"
      ]
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "05_Logging_Utility",
+   "notebookName": "Logging_File",
    "widgets": {}
   },
   "language_info": {
