--- a/notebooks/Reset Data.ipynb
+++ b/notebooks/Reset Data.ipynb
@@ -405,7 +405,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "04_validation_queries",
+   "notebookName": "Reset Data",
    "widgets": {}
   },
   "language_info": {
